Подготовка к защите - доработаны замечания

--- a/technomart/catalog.html
+++ b/technomart/catalog.html
@@ -15,7 +15,7 @@
              <!-- header-top-->
             <div class="header-top">
                 <div class="container clearfix">
-                    <a href="#" class="logo">Техномарт</a>
+                    <a href="index.html" class="logo">Техномарт</a>
                     <form class="search-btn">
                         <input type="text" placeholder="Поиск:">
                     </form>
@@ -52,7 +52,7 @@
                     <nav class="main-navigation">
                         <ul>
                             <li>
-                                <a href="#">Главная</a>
+                                <a href="index.html">Главная</a>
                             </li>
                             <li>
                                 <a href="#">Компания</a>
@@ -84,7 +84,7 @@
 			<!-- breadcrumbs -->
 			<ul class="breadcrumbs">
 				<li>
-					<a href="#"><i class="icon-home"></i></a>
+					<a href="index.html"><i class="icon-home"></i></a>
                     <i class="icon-right"></i>
 				</li>
 				<li>
@@ -132,8 +132,8 @@
 						<!-- Фильтр по производителям -->
                         <div class="filter-firms">
 						    <h2 class="filter-title">Производители:</h2>
-						    <input type="checkbox" id="ch1" name="Bosh" checked>
-						    <label for="ch1" checked>Bosh</label>
+						    <input type="checkbox" id="ch1" name="Bosch" checked>
+						    <label for="ch1" checked>Bosch</label>
 						    <input type="checkbox" id="ch2" name="Interscol">
 						    <label for="ch2">Интерскол</label>
 						    <input type="checkbox" id="ch3" name="Makita" checked>
@@ -174,11 +174,11 @@
 							<li>
 								<a href="#">По функционалу</a>
 							</li>
-                            <li>
-                                <a href="#" class="symbol active"><i class="icon-up-dir"></i></a>
+                            <li class="symbol-point">
+                                <a href="#" class="symbol-link active"><i class="icon-up-dir"></i></a>
                             </li>
-                            <li>
-                                <a href="#" class="symbol"><i class="icon-down-dir"></i></a>
+                            <li class="symbol-point">
+                                <a href="#" class="symbol-link"><i class="icon-down-dir"></i></a>
                             </li>
 						</ul>
                     </div>
@@ -193,10 +193,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                     		<div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                     		<div class="descriprion-item">
-                        		<h3 class="catalog-item-title">Перфоратор <span>bosh bfg 3000</span></h3>
+                        		<h3 class="catalog-item-title">Перфоратор <span>bosch bfg 3000</span></h3>
                         		<div class="old-price">22 500 р.</div>
                         		<div class="price">15 500 р.</div>
                         	</div>
@@ -209,10 +209,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                             <div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                             <div class="descriprion-item">
-                                <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 6000</span></h3>
+                                <h3 class="catalog-item-title">Перфоратор <span>bosch bfg 6000</span></h3>
                                 <div class="old-price">30 500 р.</div>
                                 <div class="price">25 500 р.</div>
                             </div>
@@ -226,10 +226,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                             <div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                             <div class="descriprion-item">
-                                <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 2000</span></h3>
+                                <h3 class="catalog-item-title">Перфоратор <span>bosch bfg 2000</span></h3>
                                 <div class="old-price"></div>
                                 <div class="price">12 500 р.</div>
                             </div>
@@ -242,10 +242,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                             <div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                             <div class="descriprion-item">
-                                <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 3000</span></h3>
+                                <h3 class="catalog-item-title">Перфоратор <span>bosch bfg 3000</span></h3>
                                 <div class="old-price">22 500 р.</div>
                                 <div class="price">15 500 р.</div>
                             </div>
@@ -259,10 +259,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                             <div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                             <div class="descriprion-item">
-                                <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 6000</span></h3>
+                                <h3 class="catalog-item-title">Перфоратор <span>bosch bfg 6000</span></h3>
                                 <div class="old-price">30 500 р.</div>
                                 <div class="price">25 500 р.</div>
                             </div>
@@ -275,10 +275,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                             <div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                             <div class="descriprion-item">
-                                <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 2000</span></h3>
+                                <h3 class="catalog-item-title">Перфоратор <span>bosch bfg 2000</span></h3>
                                 <div class="old-price"></div>
                                 <div class="price">12 500 р.</div>
                             </div>
@@ -292,10 +292,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                             <div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                             <div class="descriprion-item">
-                                <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 3000</span></h3>
+                                <h3 class="catalog-item-title">Перфоратор <span>bosch bfg 3000</span></h3>
                                 <div class="old-price">22 500 р.</div>
                                 <div class="price">15 500 р.</div>
                             </div>
@@ -308,10 +308,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                             <div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                             <div class="descriprion-item">
-                                <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 6000</span></h3>
+                                <h3 class="catalog-item-title">Перфоратор <span>bosch bfg 6000</span></h3>
                                 <div class="old-price">30 500 р.</div>
                                 <div class="price">25 500 р.</div>
                             </div>
@@ -324,10 +324,10 @@
                                 <a href="#" class="bookmark">В закладки</a>
                             </div>
                             <div class="catalog-image">
-                                <img src="img/picture-catalog-item.jpg" width="218" height="168">
+                                <img src="img/picture-catalog-item.jpg" width="218" height="168" alt="Перфоратор Bosch">
                             </div>
                             <div class="descriprion-item">
-                                <h3 class="catalog-item-title">Перфоратор <span>bosh bfg 2000</span></h3>
+                                <h3 class="catalog-item-title">Перфоратор <span>bosch bfg 2000</span></h3>
                                 <div class="old-price"></div>
                                 <div class="price">12 500 р.</div>
                             </div>
